<?xml version="1.0"?>
<package format="3">
  <name>rtcm_serial_to_mavlink</name>
  <version>0.1.0</version>
  <description>RTCM tools including a ROS 2 node publishing mavros_msgs/RTCM.</description>
  <maintainer email="maintainer@example.com">maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
